--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <div class="Admin">
-        <h1>Welcome to Ak tech</h1>
+        <h1>Welcome to Abhi tech</h1>
     </div>
 </body>
 </html>
